--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -42,7 +42,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=348,Y=0)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -77,7 +77,7 @@ LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=348,Y=0)
+MultipleInstancePositions=(X=0,Y=0)
 
 [MRU]
 MRUItem0=/Game/Map/NewMap
@@ -106,36 +106,32 @@ MRUItem6=/Game/Begin
 LastLevel=/Game/Map/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
-OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gblbp.gblbp
-OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial.AI_PhysicalMaterial
-OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/phy.phy
+CleanShutdown=False
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial
-MRUItem1=/Game/Map/NewMap
-MRUItem2=/Game/Enemy/EnemyGoblin/Map/Showcase_EnemyGoblin
-MRUItem3=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem4=/Game/Enemy/EnemyGoblin/NewPhysicalMaterial
-MRUItem5=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
-MRUItem6=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
-MRUItem7=/Game/Enemy/EnemyGoblin/NewBlueprint
-MRUItem8=/Game/Enemy/EnemyGoblin/Materials/M_Showcase2
-MRUItem9=/Game/Door/Door
-MRUItem10=/Game/Door/Door_Actor
-MRUItem11=/Game/Enemy/AI
-MRUItem12=/Game/Player/new/PLayer
-MRUItem13=/Game/Enemy/AI_HealthBar
-MRUItem14=/Game/Enemy/EnemyGoblin/gbl
-MRUItem15=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem16=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage
-MRUItem17=/Game/Player/new/Anim_TPC_Base
-MRUItem18=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit
-MRUItem19=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem0=/Game/Bullet
+MRUItem1=/Game/Enemy/AI_HealthBar
+MRUItem2=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
+MRUItem3=/Game/Enemy/EnemyGoblin/phy
+MRUItem4=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial
+MRUItem5=/Game/Enemy/EnemyGoblin/gblbp
+MRUItem6=/Game/Player/new/PLayer
+MRUItem7=/Game/Map/NewMap
+MRUItem8=/Game/Enemy/EnemyGoblin/Map/Showcase_EnemyGoblin
+MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem10=/Game/Enemy/EnemyGoblin/NewPhysicalMaterial
+MRUItem11=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
+MRUItem12=/Game/Enemy/EnemyGoblin/NewBlueprint
+MRUItem13=/Game/Enemy/EnemyGoblin/Materials/M_Showcase2
+MRUItem14=/Game/Door/Door
+MRUItem15=/Game/Door/Door_Actor
+MRUItem16=/Game/Enemy/AI
+MRUItem17=/Game/Enemy/EnemyGoblin/gbl
+MRUItem18=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage
+MRUItem19=/Game/Player/new/Anim_TPC_Base
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1539,6 +1535,18 @@ phy_C.PhysicalMaterial=True
 phy_C.Advanced=True
 phy_C.Destruction=True
 phy_C.PhysicalProperties=True
+AI_HealthBar_C.Appearance=True
+AI_HealthBar_C.Designer=True
+AI_HealthBar_C.Input=True
+AI_HealthBar_C.Interaction=True
+AI_HealthBar_C.Performance=True
+AI_HealthBar_C.Layout=True
+AI_HealthBar_C.Behavior=True
+AI_HealthBar_C.Render Transform=True
+AI_HealthBar_C.Accessibility=True
+AI_HealthBar_C.Clipping=True
+AI_HealthBar_C.Navigation=True
+AI_HealthBar_C.Localization=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1636,6 +1644,9 @@ phy_C.PhysicalProperties=True
 /Game/Enemy/AI_HealthBar.AI_HealthBar=0
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=0
 /Game/Enemy/EnemyGoblin/AI_PhysicalMaterial.AI_PhysicalMaterial=0
+/Game/Enemy/EnemyGoblin/phy.phy=0
+/Game/Enemy/EnemyGoblin/gblbp.gblbp=0
+/Game/Bullet.Bullet=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1740,13 +1751,14 @@ K2Node_VariableGet.Variable=False
 AI3_Child_C.Actor=False
 WidgetComponent.UserInterface=False
 Door_Actor_C.Actor=True
+gblbp_C.Actor=True
 
 [DetailPropertyExpansion]
 Border="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.FillColorAndOpacity\" "
-Visual="\"Object.Appearance.FillColorAndOpacity\" "
+Widget=
+Visual=
 Object=
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
@@ -1773,23 +1785,23 @@ BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent=
-SkinnedMeshComponent=
-MeshComponent=
-PrimitiveComponent=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 SceneComponent=
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 K2Node=
-CapsuleComponent=
-ShapeComponent=
+CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
 PLayer_C=
-Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Character="\"Object.As PLayer\" "
+Pawn="\"Object.As PLayer\" "
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
@@ -1798,9 +1810,9 @@ InventoryComponent_C=
 AI_C=
 AI2_C=
 LandscapeEditorObject="\"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
-Bullet_C="\"Object.As PLayer\" "
+Bullet_C=
 StaticMeshComponent=
-SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
+SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 NewMap_C="\"Object.AI数组\" "
 LevelScriptActor="\"Object.AI数组\" "
@@ -1814,13 +1826,13 @@ AIController=
 Controller=
 AI3_Child_C=
 gbl_C=
-gblbp_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+gblbp_C="\"Object.As PLayer\" "
 走向玩家_C=
 BTTask_BlueprintBase=
 BTTaskNode=
 BTNode=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
-WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 AI_HealthBar_C=
 Door_Actor_C="\"Object.Actor.Tags\" "
 phy_C=
@@ -1830,7 +1842,7 @@ Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -2900,9 +2912,9 @@ TimelineEnabledSnaps=MontageSection
 SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.LOD,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 AimOffsetBlendSpace=AimOffsetBlendSpace.Axis Settings.Horizontal Axis,AimOffsetBlendSpace.Axis Settings.Vertical Axis,
-K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
-PLayer_C=PLayer_C.Rendering.LOD,
-K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
+K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
+PLayer_C=
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 Anim_TPC_Base_C=
 DragDrop_C=
 InventoryUI_C=
@@ -2911,7 +2923,7 @@ PickUpUI_C=
 InventoryComponent_C=
 DragDropOperation=
 PlayerUI_C=
-PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Normal Overrides,MaterialEditorInstanceConstant.ParameterGroups.Physical Surface,MaterialEditorInstanceConstant.ParameterGroups.Textures Overrides,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 AI_Anim_C=
 AI_C=
@@ -2923,7 +2935,7 @@ Bullet_C=
 SphereComponent=SphereComponent.Collision.Collision,
 NewMap_C=
 AI3_C=
-CapsuleComponent=
+CapsuleComponent=CapsuleComponent.Collision.Collision,
 PostProcessVolume=PostProcessVolume.Lens.Lens
 BrushComponent=
 NewAnimBlueprint_C=
@@ -2933,8 +2945,8 @@ AI3_Child_C=
 gbl_C=
 BoxComponent=BoxComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
-gblbp_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
-MulticastInlineDelegatePropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,
+gblbp_C=
+MulticastInlineDelegatePropertyWrapper=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,PLayer_C.Rendering.LOD,
 走向玩家_C=
 ProgressBar=
 AI_HealthBar_C=
@@ -2991,6 +3003,7 @@ GeneralProjectSettings=True
 AssetToolsSettings=True
 AssetManagerSettings=True
 GameMapsSettings=True
+CollisionProfile=True
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
@@ -2999,6 +3012,7 @@ ChangeVariableType_Warning=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialInstanceEditor]
 bShowGrid=False
