--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=2870,Y=1670)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -107,31 +107,39 @@ LastLevel=/Game/Map/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Enemy/realAI/走向玩家.走向玩家
+OpenAssetsAtExit=/Game/Enemy/realAI/NewBehaviorTree.NewBehaviorTree
+OpenAssetsAtExit=/Game/Map/NewMap.NewMap:PersistentLevel.NewMap
+OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gblbp.gblbp
+OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gbl.gbl
+OpenAssetsAtExit=/Game/Player/new/PLayer.PLayer
+OpenAssetsAtExit=/Game/Enemy/realAI/NewBlackboardData.NewBlackboardData
+OpenAssetsAtExit=/Game/Enemy/realAI/AI_Controller.AI_Controller
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Bullet
-MRUItem1=/Game/Enemy/AI_HealthBar
-MRUItem2=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
-MRUItem3=/Game/Enemy/EnemyGoblin/phy
-MRUItem4=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial
-MRUItem5=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem6=/Game/Player/new/PLayer
-MRUItem7=/Game/Map/NewMap
-MRUItem8=/Game/Enemy/EnemyGoblin/Map/Showcase_EnemyGoblin
-MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem10=/Game/Enemy/EnemyGoblin/NewPhysicalMaterial
-MRUItem11=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
-MRUItem12=/Game/Enemy/EnemyGoblin/NewBlueprint
-MRUItem13=/Game/Enemy/EnemyGoblin/Materials/M_Showcase2
-MRUItem14=/Game/Door/Door
-MRUItem15=/Game/Door/Door_Actor
-MRUItem16=/Game/Enemy/AI
-MRUItem17=/Game/Enemy/EnemyGoblin/gbl
-MRUItem18=/Game/Enemy/EnemyGoblin/Animations/Anim_Hit_Montage
-MRUItem19=/Game/Player/new/Anim_TPC_Base
+MRUItem0=/Game/Enemy/EnemyGoblin/Sound/被击中的音效_耳聆网__声音ID：21876_
+MRUItem1=/Game/Enemy/EnemyGoblin/phy
+MRUItem2=/Game/Enemy/EnemyGoblin/AI_PhysicalMaterial
+MRUItem3=/Game/Enemy/realAI/BTService/BTService_speed200
+MRUItem4=/Game/Enemy/realAI/BTDecorator_BlueprintBase_New
+MRUItem5=/Game/Enemy/realAI/BTService/BTService_speed350
+MRUItem6=/Game/Enemy/realAI/走向玩家
+MRUItem7=/Game/Player/new/PLayer
+MRUItem8=/Game/Enemy/realAI/BTService_speed350
+MRUItem9=/Game/Enemy/EnemyGoblin/gbl
+MRUItem10=/Game/Enemy/EnemyGoblin/gblbp
+MRUItem11=/Game/Enemy/realAI/BTService_BlueprintBase_New
+MRUItem12=/Game/Enemy/realAI/NewBehaviorTree
+MRUItem13=/Game/Enemy/realAI/NewBlackboardData
+MRUItem14=/Game/Enemy/realAI/AI_Controller
+MRUItem15=/Game/Bullet
+MRUItem16=/Game/Enemy/AI_HealthBar
+MRUItem17=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
+MRUItem18=/Game/Map/NewMap
+MRUItem19=/Game/Enemy/EnemyGoblin/Map/Showcase_EnemyGoblin
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1547,6 +1555,29 @@ AI_HealthBar_C.Accessibility=True
 AI_HealthBar_C.Clipping=True
 AI_HealthBar_C.Navigation=True
 AI_HealthBar_C.Localization=True
+PathFollowingComponent.Variable=True
+PathFollowingComponent.Sockets=True
+PathFollowingComponent.Tags=True
+PathFollowingComponent.ComponentTick=True
+PathFollowingComponent.ComponentReplication=True
+PathFollowingComponent.Activation=True
+PathFollowingComponent.Cooking=True
+PathFollowingComponent.Events=True
+BTService_BlueprintBase_New_C.Description=True
+BTService_BlueprintBase_New_C.Service=True
+BTService_speed350_C.Description=True
+BTService_speed350_C.Service=True
+BTService_speed200_C.Description=True
+BTService_speed200_C.Service=True
+AIPerceptionStimuliSourceComponent.Variable=True
+AIPerceptionStimuliSourceComponent.Sockets=True
+AIPerceptionStimuliSourceComponent.AI Perception=True
+AIPerceptionStimuliSourceComponent.Tags=True
+AIPerceptionStimuliSourceComponent.ComponentTick=True
+AIPerceptionStimuliSourceComponent.ComponentReplication=True
+AIPerceptionStimuliSourceComponent.Cooking=True
+AIPerceptionStimuliSourceComponent.Events=True
+BehaviorTreeGraphNode_CompositeDecorator.Description=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1647,6 +1678,9 @@ AI_HealthBar_C.Localization=True
 /Game/Enemy/EnemyGoblin/phy.phy=0
 /Game/Enemy/EnemyGoblin/gblbp.gblbp=0
 /Game/Bullet.Bullet=0
+/Game/Enemy/realAI/BTService/BTService_speed200.BTService_speed200=0
+/Game/Enemy/realAI/BTService/BTService_speed350.BTService_speed350=0
+/Game/Enemy/EnemyGoblin/Sound/被击中的音效_耳聆网__声音ID：21876_.被击中的音效_耳聆网__声音ID：21876_=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1752,6 +1786,8 @@ AI3_Child_C.Actor=False
 WidgetComponent.UserInterface=False
 Door_Actor_C.Actor=True
 gblbp_C.Actor=True
+BTService_BlueprintBase_New_C.Service=False
+BTService_speed350_C.Service=False
 
 [DetailPropertyExpansion]
 Border="\"Object.Render Transform.RenderTransform\" "
@@ -1759,7 +1795,7 @@ ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.SkeletalMeshes\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
@@ -1778,30 +1814,30 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" "
 DataAsset="\"Object.SkeletalMeshes\" "
-AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" "
 ActorComponent=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode=
+EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-SceneComponent=
+SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
-AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base=
 K2Node=
 CapsuleComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 AnimSequence=
 AnimSequenceBase=
 AnimationAsset=
 PLayer_C=
-Character="\"Object.As PLayer\" "
-Pawn="\"Object.As PLayer\" "
+Character="\"Object.已死亡\" "
+Pawn="\"Object.已死亡\" "
 Anim_TPC_Base_C=
 AnimInstance=
 DragDrop_C="\"Object.被拖动的控件\" "
@@ -1814,8 +1850,8 @@ Bullet_C=
 StaticMeshComponent=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-NewMap_C="\"Object.AI数组\" "
-LevelScriptActor="\"Object.AI数组\" "
+NewMap_C=
+LevelScriptActor=
 AI3_C=
 AI_Anim1_C=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1826,7 +1862,7 @@ AIController=
 Controller=
 AI3_Child_C=
 gbl_C=
-gblbp_C="\"Object.As PLayer\" "
+gblbp_C="\"Object.已死亡\" "
 走向玩家_C=
 BTTask_BlueprintBase=
 BTTaskNode=
@@ -1835,11 +1871,16 @@ ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 AI_HealthBar_C=
 Door_Actor_C="\"Object.Actor.Tags\" "
-phy_C=
-PhysicalMaterial=
+phy_C="\"Object.sound\" "
+PhysicalMaterial="\"Object.sound\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
+MovementComponent=
+AIPerceptionStimuliSourceComponent="\"Object.AI Perception.RegisterAsSourceForSenses\" "
+CharacterMovementComponent=
+PawnMovementComponent=
+NavMovementComponent=
 
 [MessageLog]
 LastLogListing=PIE
@@ -2942,7 +2983,7 @@ NewAnimBlueprint_C=
 PlayerAnimBlueprint_C=
 AI_Controller_C=
 AI3_Child_C=
-gbl_C=
+gbl_C=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 BoxComponent=BoxComponent.Collision.Collision,
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 gblbp_C=
@@ -2955,6 +2996,9 @@ phy_C=
 SceneComponent=
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 Landscape=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
+MovementComponent=
+CharacterMovementComponent=
+Character=K2Node_VariableGet.DefaultValueCategory.None,SkeletalMeshComponent.Collision.Collision,AI3_Child_C.Rendering.LOD,AI_C.Rendering.LOD,AI3_C.Rendering.LOD,CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
