--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,6 +1,6 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=1910
-NewWindowHeight=1094
+NewWindowWidth=2070
+NewWindowHeight=1638
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1910,Y=1094)
+LastSize=(X=2070,Y=1638)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -107,37 +107,32 @@ LastLevel=/Game/Map/NewMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Enemy/realAI/AI_Controller.AI_Controller
-OpenAssetsAtExit=/Game/Enemy/realAI/NewBehaviorTree.NewBehaviorTree
-OpenAssetsAtExit=/Game/Enemy/Zombie/Zombie_BP.Zombie_BP
-OpenAssetsAtExit=/Game/Enemy/realAI/NewBlackboardData.NewBlackboardData
 OpenAssetsAtExit=/Game/Enemy/realAI/攻击.攻击
-OpenAssetsAtExit=/Game/Enemy/EnemyGoblin/gblbp.gblbp
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem1=/Game/Enemy/realAI/攻击
-MRUItem2=/Game/Enemy/realAI/走向玩家
+MRUItem0=/Game/Enemy/realAI/攻击
+MRUItem1=/Game/Enemy/Zombie/Zombie_BP
+MRUItem2=/Game/Enemy/realAI/Task/攻击
 MRUItem3=/Game/Enemy/realAI/NewBehaviorTree
-MRUItem4=/Game/Enemy/realAI/AI_Controller
-MRUItem5=/Game/Enemy/EnemyGoblin/gblbp_Child
-MRUItem6=/Game/Enemy/Zombie/Animations/Zombie_
-MRUItem7=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton
-MRUItem8=/Game/Enemy/Zombie/Animations/Anim_Hit_Montage
-MRUItem9=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton_AnimBlueprint
-MRUItem10=/Game/Enemy/EnemyGoblin/gbl
-MRUItem11=/Game/Enemy/EnemyGoblin/gbl_Child
-MRUItem12=/Game/Enemy/Zombie/Mesh/SK_Zombie
-MRUItem13=/Game/UndeadPack/Zombie/Animations/Anim_Hit
-MRUItem14=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
-MRUItem15=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
-MRUItem16=/Game/Enemy/EnemyGoblin/Mesh/SM_EnemyGoblin
-MRUItem17=/Game/Enemy/EnemyGoblin/Mesh/EnemyGoblin_Skeleton
-MRUItem18=/Game/UndeadPack/Zombie/Mesh/Zombie_Skeleton
-MRUItem19=/Game/UndeadPack/Zombie/Mesh/SK_Zombie
+MRUItem4=/Game/Enemy/AI_Hit
+MRUItem5=/Game/Enemy/EnemyGoblin/gblbp
+MRUItem6=/Game/Enemy/realAI/走向玩家
+MRUItem7=/Game/Enemy/realAI/AI_Controller
+MRUItem8=/Game/Enemy/EnemyGoblin/gblbp_Child
+MRUItem9=/Game/Enemy/Zombie/Animations/Zombie_
+MRUItem10=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton
+MRUItem11=/Game/Enemy/Zombie/Animations/Anim_Hit_Montage
+MRUItem12=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton_AnimBlueprint
+MRUItem13=/Game/Enemy/EnemyGoblin/gbl
+MRUItem14=/Game/Enemy/EnemyGoblin/gbl_Child
+MRUItem15=/Game/Enemy/Zombie/Mesh/SK_Zombie
+MRUItem16=/Game/UndeadPack/Zombie/Animations/Anim_Hit
+MRUItem17=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
+MRUItem18=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
+MRUItem19=/Game/Enemy/EnemyGoblin/Mesh/SM_EnemyGoblin
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1653,6 +1648,39 @@ Zombie_BP_C.Actor=True
 Zombie_BP_C.Input=True
 攻击_C.默认=True
 K2Node_CallParentFunction.Graph=True
+Zombie_BP_C.TransformCommon=True
+Zombie_BP_C.Animation=True
+Zombie_BP_C.Mesh=True
+Zombie_BP_C.Physics=True
+Zombie_BP_C.Clothing=True
+Zombie_BP_C.MasterPoseComponent=True
+Zombie_BP_C.Lighting=True
+Zombie_BP_C.ClothingSimulation=True
+Zombie_BP_C.SkinWeights=True
+Zombie_BP_C.Navigation=True
+Zombie_BP_C.VirtualTexture=True
+Zombie_BP_C.Tags=True
+Zombie_BP_C.Activation=True
+Zombie_BP_C.Cooking=True
+Zombie_BP_C.Character Movement (General Settings)=True
+Zombie_BP_C.Character Movement: Walking=True
+Zombie_BP_C.Character Movement: Jumping / Falling=True
+Zombie_BP_C.Character Movement (Networking)=True
+Zombie_BP_C.Character Movement: Swimming=True
+Zombie_BP_C.Character Movement: Flying=True
+Zombie_BP_C.Character Movement: Custom Movement=True
+Zombie_BP_C.Character Movement (Rotation Settings)=True
+Zombie_BP_C.Character Movement: Physics Interaction=True
+Zombie_BP_C.Character Movement=True
+Zombie_BP_C.Character Movement: Avoidance=True
+Zombie_BP_C.RootMotion=True
+Zombie_BP_C.Character Movement: NavMesh Movement=True
+Zombie_BP_C.NavMovement=True
+Zombie_BP_C.Velocity=True
+Zombie_BP_C.PlanarMovement=True
+Zombie_BP_C.MovementComponent=True
+Zombie_BP_C.Shape=True
+Zombie_BP_C.Materials=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1770,6 +1798,8 @@ K2Node_CallParentFunction.Graph=True
 /Game/Enemy/Zombie/Mesh/Zombie_Skeleton.Zombie_Skeleton=0
 /Game/Enemy/Zombie/Animations/Zombie_.Zombie_=0
 /Game/Enemy/Zombie/Mesh/Zombie_Skeleton_AnimBlueprint.Zombie_Skeleton_AnimBlueprint=0
+/Game/Enemy/realAI/Task/攻击.攻击=0
+/Game/Enemy/Zombie/Zombie_BP.Zombie_BP=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1902,7 +1932,7 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[5].KeyType\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[5].KeyType\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" "
 ActorComponent=
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
@@ -1953,9 +1983,9 @@ AI3_Child_C=
 gbl_C=
 gblbp_C=
 走向玩家_C=
-BTTask_BlueprintBase="\"Object.As Gblbp\" "
-BTTaskNode="\"Object.As Gblbp\" "
-BTNode="\"Object.As Gblbp\" "
+BTTask_BlueprintBase=
+BTTaskNode=
+BTNode=
 ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
 WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 AI_HealthBar_C=
@@ -1975,8 +2005,8 @@ BTService_BlueprintBase=
 BTService=
 BTAuxiliaryNode=
 BTService_攻击范围_C=
-攻击_C="\"Object.As Gblbp\" "
-Zombie_BP_C="\"Object.攻击动画蒙太奇\" "
+攻击_C=
+Zombie_BP_C=
 
 [MessageLog]
 LastLogListing=PIE
@@ -2031,8 +2061,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=1,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [RootWindow]
-ScreenPosition=X=632.667 Y=256.000
-WindowSize=X=1273.333 Y=745.333
+ScreenPosition=X=294.500 Y=198.500
+WindowSize=X=1288.000 Y=760.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2060,7 +2090,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Enemy/EnemyGoblin
+ContentBrowserTab1.SelectedPaths=/Game/Enemy/Zombie
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
