--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,6 +1,6 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowWidth=2070
-NewWindowHeight=1638
+NewWindowWidth=2080
+NewWindowHeight=1670
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -71,7 +71,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2070,Y=1638)
+LastSize=(X=2080,Y=1670)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-RT293EV
 LastExecutedLaunchName=DESKTOP-RT293EV
 LastExecutedPIEPreviewDevice=
@@ -108,31 +108,32 @@ LastLevel=/Game/Map/NewMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Enemy/realAI/攻击.攻击
+OpenAssetsAtExit=/Game/Enemy/AI_HealthBar.AI_HealthBar
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/realAI/攻击
-MRUItem1=/Game/Enemy/Zombie/Zombie_BP
-MRUItem2=/Game/Enemy/realAI/Task/攻击
-MRUItem3=/Game/Enemy/realAI/NewBehaviorTree
-MRUItem4=/Game/Enemy/AI_Hit
-MRUItem5=/Game/Enemy/EnemyGoblin/gblbp
-MRUItem6=/Game/Enemy/realAI/走向玩家
-MRUItem7=/Game/Enemy/realAI/AI_Controller
-MRUItem8=/Game/Enemy/EnemyGoblin/gblbp_Child
-MRUItem9=/Game/Enemy/Zombie/Animations/Zombie_
-MRUItem10=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton
-MRUItem11=/Game/Enemy/Zombie/Animations/Anim_Hit_Montage
-MRUItem12=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton_AnimBlueprint
-MRUItem13=/Game/Enemy/EnemyGoblin/gbl
-MRUItem14=/Game/Enemy/EnemyGoblin/gbl_Child
-MRUItem15=/Game/Enemy/Zombie/Mesh/SK_Zombie
-MRUItem16=/Game/UndeadPack/Zombie/Animations/Anim_Hit
-MRUItem17=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
-MRUItem18=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
-MRUItem19=/Game/Enemy/EnemyGoblin/Mesh/SM_EnemyGoblin
+MRUItem0=/Game/Enemy/EnemyGoblin/gblbp
+MRUItem1=/Game/Enemy/AI_HealthBar
+MRUItem2=/Game/Enemy/realAI/攻击
+MRUItem3=/Game/Enemy/Zombie/Zombie_BP
+MRUItem4=/Game/Enemy/realAI/Task/攻击
+MRUItem5=/Game/Enemy/realAI/NewBehaviorTree
+MRUItem6=/Game/Enemy/AI_Hit
+MRUItem7=/Game/Enemy/realAI/走向玩家
+MRUItem8=/Game/Enemy/realAI/AI_Controller
+MRUItem9=/Game/Enemy/EnemyGoblin/gblbp_Child
+MRUItem10=/Game/Enemy/Zombie/Animations/Zombie_
+MRUItem11=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton
+MRUItem12=/Game/Enemy/Zombie/Animations/Anim_Hit_Montage
+MRUItem13=/Game/Enemy/Zombie/Mesh/Zombie_Skeleton_AnimBlueprint
+MRUItem14=/Game/Enemy/EnemyGoblin/gbl
+MRUItem15=/Game/Enemy/EnemyGoblin/gbl_Child
+MRUItem16=/Game/Enemy/Zombie/Mesh/SK_Zombie
+MRUItem17=/Game/UndeadPack/Zombie/Animations/Anim_Hit
+MRUItem18=/Game/Enemy/EnemyGoblin/Materials/MI_EnemyGoblin_02
+MRUItem19=/Game/Enemy/EnemyGoblin/Materials/M_EnemyGoblin_01
 
 [DetailCategories]
 InventoryComponent_C.ComponentTick=True
@@ -1681,6 +1682,7 @@ Zombie_BP_C.PlanarMovement=True
 Zombie_BP_C.MovementComponent=True
 Zombie_BP_C.Shape=True
 Zombie_BP_C.Materials=True
+AI_HealthBar_C.默认=True
 
 [AssetEditorToolkitTabLocation]
 /Game/InventorySystem/InventoryComponent.InventoryComponent=0
@@ -1912,13 +1914,13 @@ BTService_speed350_C.Service=False
 Border="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PlayerUI_C=
-UserWidget=
+UserWidget="\"Object.Render Transform.RenderTransform\" "
 InventoryUI_C=
 TextBlock="\"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Render Transform.RenderTransform\" "
@@ -1934,7 +1936,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[5].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[5].KeyType\" "
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" "
-ActorComponent=
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
@@ -1942,9 +1944,9 @@ EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
-PrimitiveComponent=
-SceneComponent=
+MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 AnimGraphNode_Base=
@@ -1986,9 +1988,9 @@ gblbp_C=
 BTTask_BlueprintBase=
 BTTaskNode=
 BTNode=
-ProgressBar="\"Object.Appearance.FillColorAndOpacity\" "
-WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-AI_HealthBar_C=
+ProgressBar="\"Object.Appearance.FillColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WidgetComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[10]\" "
+AI_HealthBar_C="\"Object.Render Transform.RenderTransform\" "
 Door_Actor_C="\"Object.Actor.Tags\" "
 phy_C="\"Object.sound\" "
 PhysicalMaterial="\"Object.sound\" "
@@ -3130,6 +3132,7 @@ BTService_攻击范围_C=
 攻击_C=
 gblbp_Child_C=CapsuleComponent.Collision.Collision,
 Zombie_BP_C=
+WidgetComponent=WidgetComponent.Collision.Collision,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemy/EnemyGoblin/gblbp.gblbp;
